<resources>
    <string name="app_name">PartiuSketch</string>
    <string name="title_activity_maps">Map</string>
    <string name="search_button">Filtrar eventos</string>
    <string name="create_button">Criar evento</string>
    <string name="filter_button">Filtrar</string>
    <string name="title_activity_create">Create</string>
    <string name="back_button">Voltar</string>
    <string name="title_activity_search">Search</string>
    <string name="event_name">Nome</string>
    <string name="event_category">Categoria</string>
    <string name="event_local">Local</string>
    <string name="event_description">Descrição</string>
    <string name="event_created">Evento criado!</string>
    <string name="event_time">Data</string>
    <string name="pick_data_button">Escolher data</string>
    <string name="event_set_to">Evento marcado para </string>
    <string name="pick_time">Escolher horário</string>
    <string name="event_from">De</string>
    <string name="event_to">Até</string>
    <string name="accessToken" translatable="false">pk.eyJ1IjoiaXNoaWlrdXJpc3UiLCJhIjoiY2lqZ2UzeDF5MDJwdnRzbHQ2ZGxmd2dhNiJ9.suw7_ptzhDhCyHcNyzimuA</string>
</resources>
